Cleaned up code base for this Solution

--- a/Jt76.Ui/ReadMe.html
+++ b/Jt76.Ui/ReadMe.html
@@ -159,7 +159,7 @@
                         <strong>Default Administrator Account</strong>
                         <ul>
                             <li>Username: admin</li>
-                            <li>Email:    admin@ebenmonney.com</li>
+                            <li>Email:    admin@test.com</li>
                             <li>Password: tempP@ss123</li>
                         </ul>
                     </li>
@@ -167,7 +167,7 @@
                         <strong>Default Standard Account</strong>
                         <ul>
                             <li>Username: user</li>
-                            <li>Email:    user@ebenmonney.com</li>
+                            <li>Email:    user@test.com</li>
                             <li>Password: tempP@ss123</li>
                         </ul>
                     </li>
