--- a/Jt76.Ui/ClientApp/src/index.html
+++ b/Jt76.Ui/ClientApp/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+  </app-root>
+  <script type="text/javascript " src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.min.js">
+  </script>
 </body>
 </html>
